--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-13  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkdrawable-win32.c (draw_polygon): When drawing
+	filled polygons, don't draw the outline, similar behaviour
+	as draw_rectangle(). Apparently GTK and GIMP don't use
+	gdk_draw_polygon() much (or always draw the outline, too), as this
+	has gone undetected for so long. Thanks to Bruce Hochstetler.
+
 2004-03-10  Tor Lillqvist  <tml@iki.fi>
 
 	* gdk/win32/gdkevents-win32.c (build_key_event_state): Set also
