--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed May  5 22:23:59 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkiconfactory.c (icon_source_clear): Don't
+	call g_free() on a pixbuf.  (#141961, Crispin Flowerday) 
+
 2004-05-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkuimanager.c (print_node): Make the output 
