--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-06  Matthias Clasen  <mclasen@redhat.com>
+
+	* docs/RELEASE-HOWTO: Document the new policy of
+	bumping version numbers after release.
+
+	* configure.in: Bump version number to 2.4.2.
+
 Wed May  5 22:23:59 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkiconfactory.c (icon_source_clear): Don't
