--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-06  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkcombobox.c (gtk_combo_box_menu_state_changed): Remove
+	this no longer needed signal handler.  (#141817, Paul Pogonyshev)
+
 2004-05-06  Sven Neumann  <sven@gimp.org>
 
 	* gtk/gtkexpander.c (gtk_expander_size_allocate): in RTL mode,
