--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+Fri May  7 01:23:03 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/tmpl/gtkicontheme.sgml: Fix example.  (Steffen Röcker)
+
 2004-05-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtkuimanager.sgml: Fixes to the DTD.
