Updated Simplified Chinese translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,10 @@
+2004-05-10  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-05-03  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* wa.po: Updated Walloon file
-
 
 2004-04-30  Matthias Clasen  <mclasen@redhat.com>
 
