--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun May  9 21:05:38 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 
+	Allow to suppress the stock accelerator by using "".  (#142196,
+	David A Knight)
+	
 2004-05-08  Hans Breuer  <hans@breuer.org>
 
 	Merge from HEAD:
