--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-05-10  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/gdkdisplay.c (singlehead_...): 
+	* gdk/x11/gdkkeys-x11.c (get_effective_keymap): 
+	* gdk/x11/gdkgeometry-x11.c (expose_serial_predicate): 
+	* gdk/x11/gdkdisplay-x11.c (escape_for_xmessage): Make static.
+
+2004-05-10  Matthias Clasen  <mclasen@redhat.com>
+
 	Merge from HEAD:
 	
 	* gtk/gtkcombobox.c (gtk_combo_box_menu_position_below): 
