--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-12  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkuimanager.c (gtk_ui_manager_get_widget): Revert the
+	previous change to this function, clarify the docs instead.
+
 2004-05-11  Michael Natterer  <mitch@gimp.org>
 
 	Merged from HEAD:
