--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+Sun May 16 22:55:49 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* io-pnm.c (pnm_read_next_value): Don't read integers 
+	partially.  (#142584, Kouichirou Hiratsuka) 
+
 2004-05-10  Matthias Clasen  <mclasen@redhat.com>
 
 	* pixops/timescale.c: 
