--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-22  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkinput-win32.c (print_lc): Remove duplicated
+	line. (Spotted by Benoît Carpentier.)
+
 2004-05-17  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup):
