--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-29  Christian Rose  <menthos@menthos.com>
+
+	* tk.po: Added Turkmen translation by
+	Gurban Mühemmet Tewekgeli <gmtavakkoli@yahoo.com>.
+
 2004-05-25  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
