--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Mon May 31 02:21:48 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkhandlebox.c: Make detached handleboxes work when their
+	parent is minimized, porting the fix from 1.2.  (#1923, #57182)
+
+Mon May 31 02:03:17 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkwindow.c (gtk_window_show): Make moving realized, 
+	unmapped windows work. 
+
 2004-05-29  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "tk" to ALL_LINGUAS.
