--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun  2 00:17:07 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtktreeselection.c (gtk_tree_selection_select_range): Don't
+	allow unless selection mode is multiple.  (#142634, John Finlay)
+
 Tue Jun  1 23:14:46 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtktoolbar.h: 
