--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun  2 00:46:32 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkselection.c (_gtk_selection_request): Remove leftover
+	debug code.
+
 Wed Jun  2 00:17:07 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtktreeselection.c (gtk_tree_selection_select_range): Don't
