--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
+Thu Jun  3 21:17:29 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkentry.c (gtk_entry_completion_timeout): Calculate the
+	length of the entry contents in characters, not in bytes.
+
+	* gtk/gtkentry.c (paste_received): Don't pop up the completion
+	window on paste, noticed by Anders Carlsson.
+
 Thu Jun  3 20:51:23 2004  Matthias Clasen  <maclas@gmx.de>
 
-	* gtk/gtkcombobox.c (gtk_combo_box_class_init): Fix the al lowed
+	* gtk/gtkcombobox.c (gtk_combo_box_class_init): Fix the allowed
 	values and default value for the ::active property.  (#143669,
 	Olivier Andrieu)
 
