--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-06-04  Matthias Clasen  <mclasen@redhat.com>
 
+	* docs/widget_geometry.txt: Add a note about the !CAN_FOCUS
+	quirk in the button size allocation code.
+
 	* gtk/gtkbutton.c (gtk_button_size_allocate): Give the space
 	requested for drawing the focus indicator to the child in the
 	!CAN_FOCUS case. This should fix issues which the Gimp has with 
