Update translation of nepali
2004-06-08  Pawan Chitrakar  <pawan@nplinux.org>

	* ne.po: Update translation of nepali

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-08  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated translation of Nepali
+
 2004-06-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.4.2 ===
