Updated Hungarian translation.
2004-06-11  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-11  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-06-08  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated translation of Nepali
