--- a/po/hu.po
+++ b/po/hu.po
@@ -3,19 +3,21 @@
 # Szabolcs Ban <shooby@gnome.hu>, 1999.
 # Andras Timar <timar@gnome.hu>, 2002.
 # Laszlo Dvornik <dvornikl@mailbox.hu>, 2004.
+# Gabor Kelemen <kg0021@stud.unideb.hu>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gtk+\n"
+"Project-Id-Version: gtk+.gtk-2-4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-06-04 10:49-0400\n"
-"PO-Revision-Date: 2004-04-26 17:49+0200\n"
-"Last-Translator: Laszlo Dvornik <dvornikl@mailbox.hu>\n"
+"POT-Creation-Date: 2004-05-30 04:15+0200\n"
+"PO-Revision-Date: 2004-06-09 22:02+0200\n"
+"Last-Translator: Gabor Kelemen <kg0021@stud.unideb.hu>\n"
 "Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms:  nplurals=1; plural=0;\n"
+"X-Generator: KBabel 1.3.1\n"
 
 #: gdk-pixbuf/gdk-pixbuf-animation.c:147 gdk-pixbuf/gdk-pixbuf-io.c:769
 #: gdk-pixbuf/gdk-pixbuf-io.c:902 tests/testfilechooser.c:192
@@ -31,10 +33,8 @@ msgstr "A(z) '%s' képfájl nem tartalmaz adatokat"
 #: gdk-pixbuf/gdk-pixbuf-animation.c:198 gdk-pixbuf/gdk-pixbuf-io.c:813
 #: gdk-pixbuf/gdk-pixbuf-io.c:939 tests/testfilechooser.c:237
 #, c-format
-msgid ""
-"Failed to load image '%s': reason not known, probably a corrupt image file"
-msgstr ""
-"Nem sikerült betölteni a(z) '%s' képet: ok ismeretlen, talán sérült a képfájl"
+msgid "Failed to load image '%s': reason not known, probably a corrupt image file"
+msgstr "Nem sikerült betölteni a(z) '%s' képet: ok ismeretlen, talán sérült a képfájl"
 
 #: gdk-pixbuf/gdk-pixbuf-animation.c:226
 #, c-format
@@ -329,8 +329,7 @@ msgstr ""
 
 #: gdk-pixbuf/io-jpeg.c:908
 #, c-format
-msgid ""
-"JPEG quality must be a value between 0 and 100; value '%d' is not allowed."
+msgid "JPEG quality must be a value between 0 and 100; value '%d' is not allowed."
 msgstr ""
 "A JPEG-minőség értékének 0 és 100 között kell lennie, a(z) '%d' érték nem "
 "megengedett."
@@ -430,8 +429,7 @@ msgid "Fatal error reading PNG image file: %s"
 msgstr "Végzetes hiba a PNG képfájl olvasásakor: %s"
 
 #: gdk-pixbuf/io-png.c:813
-msgid ""
-"Keys for PNG text chunks must have at least 1 and at most 79 characters."
+msgid "Keys for PNG text chunks must have at least 1 and at most 79 characters."
 msgstr ""
 
 #: gdk-pixbuf/io-png.c:821
@@ -440,8 +438,7 @@ msgstr ""
 
 #: gdk-pixbuf/io-png.c:854
 #, c-format
-msgid ""
-"Value for PNG text chunk %s can not be converted to ISO-8859-1 encoding."
+msgid "Value for PNG text chunk %s can not be converted to ISO-8859-1 encoding."
 msgstr ""
 
 #: gdk-pixbuf/io-png.c:994
@@ -767,7 +764,7 @@ msgstr "Szín kiválasztása"
 
 #: gtk/gtkcolorbutton.c:465
 msgid "Received invalid color data\n"
-msgstr ""
+msgstr "Érvénytelen színadat érkezett\n"
 
 #: gtk/gtkcolorsel.c:567
 msgid ""
@@ -775,34 +772,36 @@ msgid ""
 "now. You can drag this color to a palette entry, or select this color as "
 "current by dragging it to the other color swatch alongside."
 msgstr ""
+"Az előzőleg kiválasztott szín, összehasonlításként a most kiválasztottal. Áthúzhatja ezt a "
+"színt egy palettabejegyzéshez, vagy kiválaszthatja mint jelenlegit a mellette lévő mezőbe húzással."
 
 #: gtk/gtkcolorsel.c:572
 msgid ""
 "The color you've chosen. You can drag this color to a palette entry to save "
 "it for use in the future."
-msgstr ""
+msgstr "Az ön által kiválasztott szín. Ezt a színt egy palettabejegyzésbe áthúzva elmentheti későbbi felhasználásra."
 
 #: gtk/gtkcolorsel.c:933
 msgid "_Save color here"
-msgstr ""
+msgstr "_Szín mentése ide"
 
 #: gtk/gtkcolorsel.c:1138
 msgid ""
 "Click this palette entry to make it the current color. To change this entry, "
 "drag a color swatch here or right-click it and select \"Save color here.\""
-msgstr ""
+msgstr "Kattintson erre a palettabejegyzésre hogy ez legyen a jelenlegi szín. A bejegyzés megváltoztatásához húzzon ide egy színt a pipetta melletti színmezőből vagy a felbukkanó menüből kattintson a \"Szín mentése ide\" pontra."
 
 #: gtk/gtkcolorsel.c:1846
 msgid ""
 "Select the color you want from the outer ring. Select the darkness or "
 "lightness of that color using the inner triangle."
-msgstr ""
+msgstr "Válassza ki a kívánt színt a külső gyűrűről. Válassza ki ezen szín a sötétségét vagy világosságát a belső háromszög használatával."
 
 #: gtk/gtkcolorsel.c:1871
 msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
 "that color."
-msgstr ""
+msgstr "Kattintson a pipettára, majd a képernyő bármely pontjára az ott lévő szín kiválasztásához."
 
 #: gtk/gtkcolorsel.c:1880
 msgid "_Hue:"
@@ -810,7 +809,7 @@ msgstr "Á_rnyalat:"
 
 #: gtk/gtkcolorsel.c:1881
 msgid "Position on the color wheel."
-msgstr ""
+msgstr "A színkerék pozíciója."
 
 #: gtk/gtkcolorsel.c:1883
 msgid "_Saturation:"
@@ -878,21 +877,21 @@ msgstr "_Paletta"
 
 #: gtk/gtkcolorsel.c:1987
 msgid "Color Wheel"
-msgstr ""
+msgstr "Színkerék"
 
 #: gtk/gtkcolorseldialog.c:116
 msgid "Color Selection"
 msgstr "Szín kiválasztása"
 
-#: gtk/gtkentry.c:4226 gtk/gtktextview.c:6925
+#: gtk/gtkentry.c:4215 gtk/gtktextview.c:6925
 msgid "Select _All"
 msgstr "_Mindent kijelöl"
 
-#: gtk/gtkentry.c:4236 gtk/gtktextview.c:6935
+#: gtk/gtkentry.c:4225 gtk/gtktextview.c:6935
 msgid "Input _Methods"
 msgstr "Beviteli _módok"
 
-#: gtk/gtkentry.c:4246 gtk/gtktextview.c:6946
+#: gtk/gtkentry.c:4235 gtk/gtktextview.c:6946
 msgid "_Insert Unicode Control Character"
 msgstr "Unicode vezérlőkarakter _beszúrása"
 
@@ -908,6 +907,8 @@ msgid ""
 "Could not retrieve information about %s:\n"
 "%s"
 msgstr ""
+"Nem érhető el információ erről: %s\n"
+"%s"
 
 #: gtk/gtkfilechooserdefault.c:740
 #, c-format
@@ -915,6 +916,8 @@ msgid ""
 "Could not add a bookmark for %s:\n"
 "%s"
 msgstr ""
+"Nem adható könyvjelző ehhez: %s\n"
+"%s"
 
 #: gtk/gtkfilechooserdefault.c:755 gtk/gtkfilechooserdefault.c:5217
 #, c-format
@@ -922,6 +925,8 @@ msgid ""
 "Could not build file name from '%s' and '%s':\n"
 "%s"
 msgstr ""
+"Nem hozható létre fájlnév ebből: %s és ebből: %s:\n"
+"%s"
 
 #: gtk/gtkfilechooserdefault.c:771
 #, c-format
@@ -929,6 +934,8 @@ msgid ""
 "Could not change the current folder to %s:\n"
 "%s"
 msgstr ""
+"Nem lehet a jelenlegi mappát átváltani erre: %s:\n"
+"%s"
 
 #: gtk/gtkfilechooserdefault.c:1053 gtk/gtkpathbar.c:842
 msgid "Home"
@@ -938,7 +945,7 @@ msgstr "Haza"
 msgid "Desktop"
 msgstr "Munkaasztal"
 
-#: gtk/gtkfilechooserdefault.c:1511
+#: gtk/gtkfilechooserdefault.c:1510
 #, c-format
 msgid ""
 "Could not create folder %s:\n"
@@ -947,35 +954,37 @@ msgstr ""
 "Nem lehet létrehozni a(z) %s mappát:\n"
 "%s"
 
-#: gtk/gtkfilechooserdefault.c:1655
+#: gtk/gtkfilechooserdefault.c:1657
 #, c-format
 msgid "Could not add bookmark for %s because it is not a folder."
-msgstr ""
+msgstr "Nem lehet könyvjelzőt adni ehhez: %s, mivel ez nem mappa"
 
-#: gtk/gtkfilechooserdefault.c:1733
+#: gtk/gtkfilechooserdefault.c:1735
 #, c-format
 msgid ""
 "Could not remove bookmark for %s:\n"
 "%s"
 msgstr ""
+"Nem lehet eltávolítani a könyvjelzőt ehhez: %s\n"
+"%s"
 
-#: gtk/gtkfilechooserdefault.c:2327
+#: gtk/gtkfilechooserdefault.c:2329
 #, c-format
 msgid "Could not add a bookmark for %s because it is an invalid path name."
-msgstr ""
+msgstr "%s érvénytelen útvonalnév, nem hozható létre könyvjelző."
 
-#: gtk/gtkfilechooserdefault.c:2518
+#: gtk/gtkfilechooserdefault.c:2520
 msgid "Folder"
 msgstr "Mappa"
 
 #. FIXME these need accelerators when appropriate, and
 #. * need the mnemonics to be rationalized
 #.
-#: gtk/gtkfilechooserdefault.c:2565 gtk/gtkstock.c:293
+#: gtk/gtkfilechooserdefault.c:2567 gtk/gtkstock.c:293
 msgid "_Add"
 msgstr "Hozzá_adás"
 
-#: gtk/gtkfilechooserdefault.c:2575 gtk/gtkstock.c:341
+#: gtk/gtkfilechooserdefault.c:2577 gtk/gtkstock.c:341
 msgid "_Remove"
 msgstr "_Eltávolítás"
 
@@ -1007,7 +1016,7 @@ msgstr "_Név:"
 
 #: gtk/gtkfilechooserdefault.c:2997
 msgid "_Browse for other folders"
-msgstr ""
+msgstr "Más mappák _tallózása"
 
 #: gtk/gtkfilechooserdefault.c:3234
 msgid "Save in _folder:"
@@ -1015,7 +1024,7 @@ msgstr "Mentés _mappába:"
 
 #: gtk/gtkfilechooserdefault.c:3236
 msgid "Create in _folder:"
-msgstr ""
+msgstr "Létrehozás _mappában:"
 
 #: gtk/gtkfilechooserdefault.c:3861
 msgid "Can't change to folder because it isn't local"
@@ -1023,16 +1032,16 @@ msgstr "Nem lehet megváltoztatni a mappát, mert az nem helyi"
 
 #: gtk/gtkfilechooserdefault.c:3996
 msgid "Could not find the path"
-msgstr ""
+msgstr "Az útvonal nem található"
 
 #: gtk/gtkfilechooserdefault.c:4344
 #, c-format
 msgid "shortcut %s does not exist"
-msgstr ""
+msgstr "%s gyorsbillentyű nem létezik"
 
 #: gtk/gtkfilechooserdefault.c:4990
 msgid "Type name of new folder"
-msgstr ""
+msgstr "Új mappa típusának neve"
 
 #: gtk/gtkfilechooserdefault.c:5019
 #, c-format
@@ -1070,7 +1079,7 @@ msgstr "Ismeretlen"
 
 #: gtk/gtkfilechooserdefault.c:5178
 msgid "Cannot change to the folder you specified as it is an invalid path."
-msgstr ""
+msgstr "Nem lehet az ön által megadott mappába lépni mivel az egy érvénytelen útvonal."
 
 #: gtk/gtkfilechooserdefault.c:5255
 #, c-format
@@ -1087,7 +1096,7 @@ msgstr "Hely megnyitása"
 
 #: gtk/gtkfilechooserdefault.c:5299
 msgid "Save in Location"
-msgstr ""
+msgstr "Mentés helye"
 
 #: gtk/gtkfilechooserdefault.c:5317
 msgid "_Location:"
@@ -1121,6 +1130,9 @@ msgid ""
 "available to this program.\n"
 "Are you sure that you want to select it?"
 msgstr ""
+"A(z) \"%s\" fájl egy másik (%s nevű) gépen helyezkedik el és nem érhető el ezen "
+"program számára.\n"
+"Valóban ki akarja választani? "
 
 #: gtk/gtkfilesel.c:1115
 msgid "_New Folder"
@@ -1136,9 +1148,8 @@ msgstr "Fájl át_nevezése"
 
 #: gtk/gtkfilesel.c:1439
 #, c-format
-msgid ""
-"The folder name \"%s\" contains symbols that are not allowed in filenames"
-msgstr ""
+msgid "The folder name \"%s\" contains symbols that are not allowed in filenames"
+msgstr "A(z) \"%s\" mappanév fájlnevekben meg nem engedett szimbólumokat tartalmaz"
 
 #: gtk/gtkfilesel.c:1441
 #, c-format
@@ -1151,12 +1162,12 @@ msgstr ""
 
 #: gtk/gtkfilesel.c:1442 gtk/gtkfilesel.c:1678
 msgid "You probably used symbols not allowed in filenames."
-msgstr ""
+msgstr "Valószínűleg fájlnevekben meg nem engedett szimbólumokat használt."
 
 #: gtk/gtkfilesel.c:1450
 #, c-format
 msgid "Error creating folder \"%s\": %s\n"
-msgstr "Hiba a mappa létrehozásakor: \"%s\": %s\n"
+msgstr "Hiba a(z) \"%s\" mappa létrehozásakor: %s\n"
 
 #: gtk/gtkfilesel.c:1484
 msgid "New Folder"
@@ -1173,7 +1184,7 @@ msgstr "Lét_rehozás"
 #: gtk/gtkfilesel.c:1566
 #, c-format
 msgid "The filename \"%s\" contains symbols that are not allowed in filenames"
-msgstr ""
+msgstr "A(z) \"%s\" fájlnév fájlnevekben meg nem engedett szimbólumokat tartalmaz"
 
 #: gtk/gtkfilesel.c:1569
 #, c-format
@@ -1186,7 +1197,7 @@ msgstr ""
 
 #: gtk/gtkfilesel.c:1571 gtk/gtkfilesel.c:1692
 msgid "It probably contains symbols not allowed in filenames."
-msgstr ""
+msgstr "Valószínűleg fájlnevekben meg nem engedett szimbólumokat tartalmaz."
 
 #: gtk/gtkfilesel.c:1580
 #, c-format
@@ -1205,7 +1216,7 @@ msgstr "Fájl törlése"
 #: gtk/gtkfilesel.c:1674 gtk/gtkfilesel.c:1688
 #, c-format
 msgid "The file name \"%s\" contains symbols that are not allowed in filenames"
-msgstr ""
+msgstr "A(z) \"%s\" fájlnév fájlnevekben meg nem engedett szimbólumokat tartalmaz"
 
 #: gtk/gtkfilesel.c:1676
 #, c-format
@@ -1213,6 +1224,8 @@ msgid ""
 "Error renaming file to \"%s\": %s\n"
 "%s"
 msgstr ""
+"Hiba a fájl átnevezése közben erre: \"%s\" : %s\n"
+"%s"
 
 #: gtk/gtkfilesel.c:1690
 #, c-format
@@ -1220,11 +1233,13 @@ msgid ""
 "Error renaming file \"%s\": %s\n"
 "%s"
 msgstr ""
+"Hiba \"%s\" fájl átnevezése közben: %s\n"
+"%s"
 
 #: gtk/gtkfilesel.c:1700
 #, c-format
 msgid "Error renaming file \"%s\" to \"%s\": %s"
-msgstr ""
+msgstr "Hiba \"%s\" fájl erre: \"%s\" való átnevezése közben: %s"
 
 #: gtk/gtkfilesel.c:1747
 msgid "Rename File"
@@ -1350,7 +1365,7 @@ msgstr "_Méret:"
 msgid "_Preview:"
 msgstr "_Előnézet:"
 
-#: gtk/gtkfontsel.c:1327
+#: gtk/gtkfontsel.c:1318
 msgid "Font Selection"
 msgstr "Betűkészlet választó"
 
@@ -1911,3 +1926,4 @@ msgstr "X Input Method"
 #, c-format
 msgid "Could not get information for file '%s': %s"
 msgstr "Nem lehet információt szerezni a(z) '%s' fájlról: %s"
+
