--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* io-tiff.c: Make the tiff loader work with both 
+	libtiff 3.5.7 and libtiff 3.6.1.  (#135541, Marco Ghirlanda)
+
 2004-06-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.4.3 ===
