--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jun 18 21:23:08 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/tmpl/gtktreemodelfilter.sgml: Fix the docs for
+	GtkTreeModelFilterVisibleFunc.  (#144583, Olivier Andrieu)
+
 2004-06-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.4.3 ===
