--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jun 20 00:16:00 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk-pixbuf-scale.c (gdk_pixbuf_composite): Add a figure which
+	explains pixbuf compositing.
+
 2004-06-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* io-tiff.c: Make the tiff loader work with both 
