--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-20  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-06-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.4.3 ===
