--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jun 22 21:54:24 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk-pixbuf/composite.dia: 
+	* gdk-pixbuf/composite.png: Flip the y axes in the diagrams. 
+
 Sun Jun 20 00:17:58 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gdk-pixbuf/composite.png: Add a figure which tries
