Fixed LTR translation
2004-06-24  Alexander Shopov  <ash@contact.bg>

	* bg.po: Fixed LTR translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-24  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Fixed LTR translation
+	
 2004-06-20  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
