--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-28  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Translation updated.
+
 2004-06-01  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
