--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jul  3 00:41:44 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* pixops/pixops.c (bilinear_box_make_weights): Correct the
+	math to calculate bilinear weights. (#112412, Brian Cameron)
+
 Sun Jun 20 00:16:00 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gdk-pixbuf-scale.c (gdk_pixbuf_composite): Add a figure which
