--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-04  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated Nepali Translation
+
 2004-06-28  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Translation updated.
