--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Mon Jul  5 23:47:38 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkfilechooserutils.c (delegate_notify): Use
+	the less efficient g_object_interface_find_property () instead
+	of the param_id range check, since the GParamSpecs we're 
+ 	dealing with are the overridden onces on the interface, whose
+	param_id is always zero.  (#145312, Alex Roitman, fix proposed
+	by Owen Taylor)
+ 
 Sun Jul  4 01:29:35 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkcalendar.c (gtk_calendar_drag_data_get): 
