Updated Hebrew translation. Thanks to Ohad Lutzki.
* he.po: Updated Hebrew translation.
	Thanks to Ohad Lutzki.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-06  Gil Osher  <dolfin@rpg.org.il>
+
+	* he.po: Updated Hebrew translation.
+		Thanks to Ohad Lutzki.
+
 2004-07-05  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
