Use the requisition of the widget instead of relying on the style drawing
2004-07-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktooltips.c (gtk_tooltips_paint_window): Use the
	requisition of the widget instead of relying on the style
	drawing function to supply the size of the drawable.  (#146531)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktooltips.c (gtk_tooltips_paint_window): Use the 
+	requisition of the widget instead of relying on the style
+	drawing function to supply the size of the drawable.  (#146531)	
+
+2004-07-09  Matthias Clasen  <mclasen@redhat.com>
+
 	* NEWS: Updates.
 
 2004-07-09  Matthias Clasen  <mclasen@redhat.com>
