--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-10  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-07-10  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.4.4 ===
