--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2004-07-12  Matthias Clasen  <mclasen@redhat.com>
 
-	* gtk/gtkentrycompletion.c: Warning fixes.  (#147420,
-	Morten Welinder)
+	* gtk/gtkrc.c (_gtk_rc_init): Apply the gtk-default-menu-item-style 
+	to cell view menu items as well.  (#147405, John Cupitt)
 
 	* gtk/gtkcombobox.c (gtk_combo_box_menu_key_press): Pop down 
 	first. (#147399, John Cupitt)
