--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-07-13  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkmain.h: Add gtk_parse_args(). Its public API.  (#147476, 
+	Owen Taylor)
+
 	* gtk/gtkcombobox.c (gtk_combo_box_popdown): Don't crash if
 	unrealized.
 
