--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-13  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-06-28  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Translation updated.
