Finnish translation updated by Sami Pesonen <sampeson@iki.fi>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-13  Sami Pesonen  <sampeson@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2004-07-13  Alexander Winston  <alexander.winston@comcast.net>
 
 	* en_CA.po: Updated Canadian English translation.
@@ -138,8 +142,7 @@
 
 2004-04-18  Sami Pesonen  <sampeson@iki.fi>
 
-	* fi.po: Updated Finnish
- translation.
+	* fi.po: Updated Finnish translation.
 
 2004-04-18  Vincent van Adrighem  <adrighem@gnome.org>
 
