--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 13 21:55:15 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkicontheme.c (free_unthemed_icon): Don't leak
+	no_svg_filename.  (#147399, Kjartan Maraas)
+
 2004-07-13  Federico Mena Quintero  <federico@ximian.com>
 
 	Merged from HEAD:
