--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-15  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2004-07-15  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
