Updated Canadian English translation.
2004-07-16  Alexander Winston  <alexander.winston@comcast.net>

	* en_CA.po: Updated Canadian English translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-16  Alexander Winston  <alexander.winston@comcast.net>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-07-16  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
