Updated Italian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-17  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation by
+	Alessio Dessi` <alessiodessi@tiscali.it>.
+
 2004-07-16  Alexander Winston  <alexander.winston@comcast.net>
 
 	* en_CA.po: Updated Canadian English translation.
