Updated British English translation by James Ogley

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-19  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Translation updated by James Ogley
+	<james@usr-local-bin.org>
+
 2004-07-18  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
