--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Tue Jul 20 22:26:29 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkfilechooserutils.h: 
+	* gtk/gtktoolbutton.c: 
+	* gtk/gtktoolbar.c: 
+	* gtk/gtkicontheme.c: 
+	* gtk/gtkcalendar.c: 
+	* demos/gtk-demo/ui_manager.c: 
+	* demos/gtk-demo/appwindow.c: Remove trailing commas
+	from enumerations.  (#148035)
+
 2004-07-20  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkuimanager.c (update_node, free_node): Ref an sink
