--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 20 22:23:26 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk-pixbuf-io.h: Remove trailing commas from 
+	enumerations.  (#148035)
+
 2004-07-10  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.4.4 ===
