--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-21  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+        * hi.po: Updated Hindi translation.
+
 2004-07-19  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Translation updated by James Ogley
