Translation updated by Mətin Əmirov.
2004-07-21  Metin Amiroff  <metin@karegen.com>

	* az.po: Translation updated by Mətin Əmirov.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-21  Metin Amiroff  <metin@karegen.com>
+
+	* az.po: Translation updated by Mətin Əmirov.
+
 2004-07-21  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * hi.po: Updated Hindi translation.
